objects/ASI_HK_CRM_Visitation_Plan__c.object
<CustomObject>
    <description>ASI HK CRM - Visitation Plan</description>
    <fields>
        <fullName>ASI_CRM_Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_CountVPD__c</fullName>
        <description>(COUNT Visitation Plan Detail)</description>
        <label>Count VPD</label>
        <summaryFilterItems>
            <field>ASI_HK_CRM_Visitation_Plan_Detail__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>MY Visitation Plan Detail</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_HK_CRM_Visitation_Plan_Detail__c.ASI_HK_CRM_Visitation_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Month_Number__c</fullName>
        <formula>CASE( TEXT(ASI_HK_CRM_Month__c), 
&apos;January&apos;,&apos;1&apos;,
&apos;February&apos;,&apos;2&apos;,
&apos;March&apos;,&apos;3&apos;,
&apos;April&apos;,&apos;4&apos;,
&apos;May&apos;,&apos;5&apos;,
&apos;June&apos;,&apos;6&apos;,
&apos;July&apos;,&apos;7&apos;,
&apos;August&apos;,&apos;8&apos;,
&apos;September&apos;,&apos;9&apos;,
&apos;October&apos;,&apos;10&apos;,
&apos;November&apos;,&apos;11&apos;,
&apos;December&apos;,&apos;12&apos;,
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month (Number)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Number_of_Outlet__c</fullName>
        <label>Number of Outlets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Visits_Generated__c</fullName>
        <label>Outlet Visits Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys_Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TH_Month_End_Date__c</fullName>
        <formula>IF(
  MONTH( ASI_CRM_TH_Month_Start_Date__c ) = 12,
  DATE( VALUE(ASI_HK_CRM_Year__c), 12, 31 ),
  DATE( VALUE(ASI_HK_CRM_Year__c), VALUE(ASI_CRM_Month_Number__c) + 1, 1 ) - 1 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TH_Month_Start_Date__c</fullName>
        <formula>DATE (VALUE(ASI_HK_CRM_Year__c),VALUE(ASI_CRM_Month_Number__c),1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TH_No_of_Actual__c</fullName>
        <description>Roll up summary of Achieved Call Details</description>
        <label>No. of Actual</label>
        <summaryFilterItems>
            <field>ASI_HK_CRM_Visitation_Plan_Detail__c.ASI_TH_CRM_Visit_Date_Time_To__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_HK_CRM_Visitation_Plan_Detail__c.ASI_HK_CRM_Visitation_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TH_No_of_Target__c</fullName>
        <label>No. of Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Num_General_Feedback__c</fullName>
        <label>No. of General Feedback</label>
        <summaryFilterItems>
            <field>ASI_HK_CRM_Visitation_Plan_Detail__c.ASI_CRM_VN_Has_Feedback__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_HK_CRM_Visitation_Plan_Detail__c.ASI_HK_CRM_Visitation_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Number_of_Visited__c</fullName>
        <label>Number of Visited Visits</label>
        <summaryFilterItems>
            <field>ASI_HK_CRM_Visitation_Plan_Detail__c.ASI_HK_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Achieved</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_HK_CRM_Visitation_Plan_Detail__c.ASI_HK_CRM_Visitation_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Period__c</fullName>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First Half</fullName>
                </value>
                <value>
                    <fullName>Second Half</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Remaining_Visits__c</fullName>
        <formula>ASI_HK_CRM_Visits_Generated__c -  ASI_CRM_VN_Number_of_Visited__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Sales_Target_Factor__c</fullName>
        <label>Sales Target Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Submit_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Submit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Manager_Email__c</fullName>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                    <default>true</default>
                    <label>January</label>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Sales_Director_Email__c</fullName>
        <label>Sales Director Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Sys_YearAndMonthAndOwner__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Sys_YearAndMonthAndOwner</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Sys_Year__c</fullName>
        <formula>IF(ISNUMBER(ASI_HK_CRM_Year__c), VALUE(ASI_HK_CRM_Year__c), NULL)</formula>
        <label>Sys_Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Visits_Generated__c</fullName>
        <label>Visits Generated</label>
        <summaryForeignKey>ASI_HK_CRM_Visitation_Plan_Detail__c.ASI_HK_CRM_Visitation_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Year__c</fullName>
        <defaultValue>TEXT(YEAR(TODAY()))</defaultValue>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Visitation Plan</label>
    <listViews>
        <fullName>ASI_CRM_MO_Visitation_Plans</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_HK_CRM_Year__c</columns>
        <columns>ASI_HK_CRM_Month__c</columns>
        <columns>ASI_HK_CRM_Confirmed__c</columns>
        <columns>ASI_CRM_TH_No_of_Actual__c</columns>
        <columns>ASI_HK_CRM_Visits_Generated__c</columns>
        <columns>ASI_CRM_TH_Month_Start_Date__c</columns>
        <columns>ASI_CRM_TH_Month_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Visitation_Plan__c.ASI_CRM_MO_Visitation_Plan</value>
        </filters>
        <label>MO Visitation Plans</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_MO_Power_Users</group>
            <group>ASI_CRM_MO_Standard_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_MY_VisitationPlan</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Year__c</columns>
        <columns>ASI_HK_CRM_Month__c</columns>
        <columns>ASI_HK_CRM_Confirmed__c</columns>
        <columns>ASI_CRM_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_HK_CRM_Visits_Generated__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Visitation_Plan__c.ASI_CRM_MY_VisitationPlan</value>
        </filters>
        <label>MY Visitation Plan</label>
        <language>en_GB</language>
        <sharedTo>
            <roleAndSubordinates>ASI_MY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_SG_Visitation_Plans</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Year__c</columns>
        <columns>ASI_HK_CRM_Month__c</columns>
        <columns>ASI_HK_CRM_Confirmed__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_HK_CRM_Visits_Generated__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Visitation_Plan__c.ASI_CRM_SG_Visitation_Plan</value>
        </filters>
        <label>SG Visitation Plans</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_SG_Potential_Outlet_Share</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TW_VisitationPlan</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Year__c</columns>
        <columns>ASI_HK_CRM_Month__c</columns>
        <columns>ASI_HK_CRM_Confirmed__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_HK_CRM_Visits_Generated__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Visitation_Plan__c.ASI_CRM_TW_Visitation_Plan</value>
        </filters>
        <filters>
            <field>ASI_HK_CRM_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <label>TW Visitation Plan</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_VN_VisitationPlanView</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Year__c</columns>
        <columns>ASI_HK_CRM_Month__c</columns>
        <columns>ASI_HK_CRM_Confirmed__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_HK_CRM_Visits_Generated__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Visitation_Plan__c.ASI_CRM_VN_Visitation_Plan,ASI_HK_CRM_Visitation_Plan__c.ASI_CRM_VN_Visitation_Plan_Submitted</value>
        </filters>
        <label>All VN Visitation Plan</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_HK_CRM_My_Outstanding_Plans</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Year__c</columns>
        <columns>ASI_HK_CRM_Month__c</columns>
        <columns>ASI_HK_CRM_Confirmed__c</columns>
        <columns>ASI_HK_CRM_Visits_Generated__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ASI_HK_CRM_Confirmed__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>My Outstanding Plans</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_HK_CRM_My_Visitation_Plans</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Year__c</columns>
        <columns>ASI_HK_CRM_Month__c</columns>
        <columns>ASI_HK_CRM_Confirmed__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_HK_CRM_Visits_Generated__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Visitation Plans</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_HK_CRM_My_Visitations</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Year__c</columns>
        <columns>ASI_HK_CRM_Month__c</columns>
        <columns>ASI_HK_CRM_Confirmed__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_HK_CRM_Visits_Generated__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Visitations</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_TH_CRM_VisitationPlanView</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Year__c</columns>
        <columns>ASI_HK_CRM_Month__c</columns>
        <columns>ASI_HK_CRM_Confirmed__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_HK_CRM_Visits_Generated__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Visitation_Plan__c.ASI_TH_CRM_Visitation_Plan</value>
        </filters>
        <label>All TH Visitation Plan</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_On_Premise_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Year__c</columns>
        <columns>ASI_HK_CRM_Month__c</columns>
        <columns>ASI_HK_CRM_Confirmed__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_HK_CRM_Visits_Generated__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Mar_Visitation_Plan</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Year__c</columns>
        <columns>ASI_HK_CRM_Month__c</columns>
        <columns>ASI_HK_CRM_Confirmed__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_HK_CRM_Visits_Generated__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ASI_CRM_TH_No_of_Target__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Visitation_Plan__c.ASI_TH_CRM_Visitation_Plan</value>
        </filters>
        <filters>
            <field>ASI_HK_CRM_Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>ASI_HK_CRM_Month__c</field>
            <operation>equals</operation>
            <value>March</value>
        </filters>
        <label>All Mar Visitation Plan</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_On_Premise_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_TH_Visitation_Plan_Confirmed</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Year__c</columns>
        <columns>ASI_HK_CRM_Month__c</columns>
        <columns>ASI_HK_CRM_Confirmed__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_HK_CRM_Visits_Generated__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Visitation_Plan__c.ASI_TH_CRM_Visitation_Plan</value>
        </filters>
        <filters>
            <field>ASI_HK_CRM_Confirmed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ASI_HK_CRM_Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <filters>
            <field>ASI_HK_CRM_Month__c</field>
            <operation>equals</operation>
            <value>January</value>
        </filters>
        <label>All TH Visitation Plan-Confirmed</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_Access_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HK_Visitation_Plan</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Year__c</columns>
        <columns>ASI_HK_CRM_Month__c</columns>
        <columns>ASI_HK_CRM_Confirmed__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_HK_CRM_Visits_Generated__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Visitation_Plan__c.ASI_HK_CRM_Visitation_Plan</value>
        </filters>
        <label>HK Visitation Plan</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TW_Merchandiser_Visitation_Plans</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Year__c</columns>
        <columns>ASI_HK_CRM_Month__c</columns>
        <columns>ASI_HK_CRM_Confirmed__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_HK_CRM_Visits_Generated__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Visitation_Plan__c.ASI_CRM_TW_Merchandiser_Visitation_Plan</value>
        </filters>
        <filters>
            <field>ASI_HK_CRM_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <label>TW Merchandiser Visitation Plans</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_MFM_TW_PR</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Visitation Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visitation Plans</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MO_Visitation_Plan</fullName>
        <active>true</active>
        <label>ASI CRM MO Visitation Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_VisitationPlan</fullName>
        <active>true</active>
        <label>MY Visitation Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Visitation_Plan</fullName>
        <active>true</active>
        <label>SG CRM Visitation Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Merchandiser_Visitation_Plan</fullName>
        <active>true</active>
        <label>TW Merchandiser Visitation Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Visitation_Plan</fullName>
        <active>true</active>
        <description>This is used by TW CRM</description>
        <label>TW Visitation Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Visitation_Plan</fullName>
        <active>true</active>
        <label>VN Visitation Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Visitation_Plan_Submitted</fullName>
        <active>true</active>
        <label>VN Visitation Plan Submitted</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_HK_CRM_Visitation_Plan</fullName>
        <active>true</active>
        <label>HK CRM Visitation Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TH_CRM_Visitation_Plan</fullName>
        <active>true</active>
        <label>TH CRM Visitation Plan</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_MY_Confirmed_Chk</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
	$User.BypassVR__c != TRUE, 
	RecordType.DeveloperName = &apos;ASI_CRM_MY_VisitationPlan&apos;, 
	ISNEW() ,
	ASI_HK_CRM_Confirmed__c = TRUE
)</errorConditionFormula>
        <errorMessage>Visitation plan CANNOT be confirmed when creating a new plan.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_MY_Confirmed_Chk2</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
	$User.BypassVR__c != TRUE,
	RecordType.DeveloperName = &apos;ASI_CRM_MY_VisitationPlan&apos;,  
	ASI_HK_CRM_Confirmed__c = TRUE,
	NOT(ISCHANGED(ASI_HK_CRM_Confirmed__c)),
	NOT(ISCHANGED(ASI_CRM_TH_No_of_Actual__c)),
	OR(
		ISCHANGED(Name),
		ISCHANGED(ASI_HK_CRM_Month__c),
		ISCHANGED(ASI_HK_CRM_Year__c),
		ISCHANGED(OwnerId)
	)
)</errorConditionFormula>
        <errorMessage>The visitation plan is already CONFIRMED.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_HK_CRM_CannotEditConfirmed</fullName>
        <active>true</active>
        <description>Should not update confirmed visitations</description>
        <errorConditionFormula>AND( RecordType.DeveloperName = &apos;ASI_HK_CRM_Visitation_Plan&apos;,
ISCHANGED( ASI_HK_CRM_Confirmed__c ) &lt;&gt; (ASI_HK_CRM_Confirmed__c == TRUE))</errorConditionFormula>
        <errorDisplayField>ASI_HK_CRM_Confirmed__c</errorDisplayField>
        <errorMessage>The visitation plan is already confirmed and copied to visitation events.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_HK_CRM_ForbidUpdateDateIfHavingDetai</fullName>
        <active>true</active>
        <description>Do not allow to update Year/Month if already having Visitation Details</description>
        <errorConditionFormula>(ISCHANGED( ASI_HK_CRM_Year__c ) || ISCHANGED( ASI_HK_CRM_Month__c )) &amp;&amp; ASI_HK_CRM_Visits_Generated__c &gt; 0</errorConditionFormula>
        <errorMessage>Visitation details are already created. Update of Year / Month is not allowed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_HK_CRM_YearValidation</fullName>
        <active>true</active>
        <description>Check the format of year</description>
        <errorConditionFormula>NOT( ISNUMBER( ASI_HK_CRM_Year__c ) )
|| CEILING( VALUE( ASI_HK_CRM_Year__c ) ) != VALUE( ASI_HK_CRM_Year__c )
|| VALUE( ASI_HK_CRM_Year__c ) &lt;= 1000
|| VALUE( ASI_HK_CRM_Year__c ) &gt;= 10000</errorConditionFormula>
        <errorDisplayField>ASI_HK_CRM_Year__c</errorDisplayField>
        <errorMessage>Invalid Year</errorMessage>
    </validationRules>
</CustomObject>